[package]
name = "unity-clean"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
gen-iter = "0.3.0"
tracing = "0.1.37"

[dev-dependencies]

[features]
default = []
