[package]
name = "unity-utils"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/unity-tools"
documentation = "https://docs.rs/unity-utils"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
trash = "3.0.1"
gen-iter = "0.3.0"
tracing = "0.1.37"
fast-walker = "0.1.2"

[dev-dependencies]

[features]
default = []
